--- a/content_scripts/css/dark_theme_login.css
+++ b/content_scripts/css/dark_theme_login.css
@@ -1,3 +1,12 @@
+:root {
+  --backgroundColor: #fff;
+  --color: #212529;
+  /* --headerBackgroundColor:; */
+  --borderColor: rgba(0, 0, 0, 0.125);
+  --linkColor: #0f6fc5;
+  --radius: 6px;
+}
+
 :root.dark {
   --backgroundColor: #0d1117;
   --color: #c9d1d9;
@@ -6,19 +15,23 @@
   --linkColor: #58a6ff;
   --radius: 6px;
 }
-body {
-  color: var(--color);
-  background-color: var(--backgroundColor);
+
+.dark body {
+  background-color: var(--headerBackgroundColor);
 }
 
 .bg-warning,
 .btn-warning {
   background-color: #e0a800 !important;
 }
-.card-header {
+
+.dark .card-header {
   background-color: var(--headerBackgroundColor);
+  color: var(--color);
 }
-.card,
-.card-body {
+
+.dark .card,
+.dark .card-body {
   background-color: var(--backgroundColor);
+  color: var(--color);
 }
