--- a/popup/style.css
+++ b/popup/style.css
@@ -12,8 +12,53 @@ div {
   font-weight: bold;
 }
 
-.color-theme-switch {
+/* .switch {
   background-color: var(--backgroundColor);
   color: var(--color);
   border-radius: 6px;
+} */
+input {
+  display: none;
+}
+.color-theme {
+  width: 200px;
+  height: 50px;
+  position: relative;
+  margin-bottom: 10px;
+}
+span h2 {
+  float: left;
+  margin-top: 0px;
+  margin-right: 5px;
+}
+label {
+  width: 60px;
+  height: 30px;
+  box-sizing: border-box;
+  border: 3px solid;
+  position: relative;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: 0.3s ease;
+  float: right;
+}
+input[type='checkbox']:checked + label {
+  background: #55e868;
+}
+input[type='checkbox']:checked + label:before {
+  left: 30px;
+}
+label:before {
+  transition: 0.4s ease;
+  content: '';
+  width: 22px;
+  height: 22px;
+  position: absolute;
+  background: white;
+  left: 1.2px;
+  top: 1.2px;
+  color: black;
+  box-sizing: border-box;
+  border: 3px solid;
+  border-radius: 50px;
 }
