--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -78,31 +78,27 @@ section .odd {
 }
 
 /* 編集時にコースをゆらす */
-.coursebox[draggable='true'].odd {
+.coursebox[draggable='true']:nth-child(3n) {
     animation: tremble1 1.1s infinite;
 }
-/* なぜか効かない */
-/* .coursebox.odd[draggable='true']:nth-child(even) {
-    animation: tremble2 0.9s infinite;
-} */
 @keyframes tremble1 {
     0% {
         transform: translate(0px, 0px) rotateZ(0deg);
     }
     25% {
-        transform: translate(2px, 2px) rotateZ(0.5deg);
+        transform: translate(2px, 2px) rotateZ(0.7deg);
     }
     50% {
         transform: translate(0px, 2px) rotateZ(0deg);
     }
     75% {
-        transform: translate(2px, 0px) rotateZ(-0.5deg);
+        transform: translate(2px, 2px) rotateZ(-0.7deg);
     }
     100% {
         transform: translate(0px, 0px) rotateZ(0deg);
     }
 }
-.coursebox[draggable='true'].even {
+.coursebox[draggable='true']:nth-child(3n + 1) {
     animation: tremble2 0.9s infinite;
 }
 @keyframes tremble2 {
@@ -113,10 +109,30 @@ section .odd {
         transform: translate(2px, 2px) rotateZ(-0.5deg);
     }
     50% {
-        transform: translate(0px, 2px) rotateZ(0deg);
+        transform: translate(2px, 0px) rotateZ(0deg);
     }
     75% {
-        transform: translate(2px, 0px) rotateZ(0.5deg);
+        transform: translate(0px, 2px) rotateZ(0.5deg);
+    }
+    100% {
+        transform: translate(0px, 0px) rotateZ(0deg);
+    }
+}
+.coursebox[draggable='true']:nth-child(3n + 2) {
+    animation: tremble3 0.8s infinite;
+}
+@keyframes tremble3 {
+    0% {
+        transform: translate(0px, 0px) rotateZ(0deg);
+    }
+    25% {
+        transform: translate(2px, 2px) rotateZ(0.6deg);
+    }
+    50% {
+        transform: translate(2px, 0px) rotateZ(0deg);
+    }
+    75% {
+        transform: translate(2px, 0px) rotateZ(-0.5deg);
     }
     100% {
         transform: translate(0px, 0px) rotateZ(0deg);
