--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -64,7 +64,8 @@ header#page-header > div.col-12.pt-3.pb-3 {
     padding-top: 0.5rem !important;
     padding-bottom: 0.8rem !important;
 }
-#frontpage-course-list {
+#frontpage-course-list,
+#display-off-course-list {
     margin-top: 0.5rem;
 }
 
