--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -285,9 +285,9 @@ tr[bgcolor='#dddddd'] th {
     background-color: var(--headerBackgroundColor);
     border: 1px solid var(--borderColor);
 }
-.dark .editor_atto_toolbar .atto_group {
+.dark .editor_atto .editor_atto_toolbar .atto_group {
+    background-color: var(--borderColor);
     border: 1px solid var(--borderColor);
-    border-bottom: 1px solid var(--borderColor);
 }
 .dark .editor_atto_toolbar button + button {
     border-left: 1px solid var(--borderColor);
@@ -298,13 +298,17 @@ tr[bgcolor='#dddddd'] th {
     color: var(--color);
 }
 .dark .editor_atto_content_wrap {
-    background-color: var(--backgroundColor);
-    border: 1px solid var(--borderColor);
+    background-color: #010409;
     color: var(--color);
 }
-/* .dark .editor_atto_content_wrap {
-    outline: solid 1px var(--linkColor);
-} */
+
+select.select,
+select.custom-select {
+    background-color: var(--headerBackgroundColor);
+    border-color: var(--borderColor);
+    /* border-radius: var(--radius); */
+    color: var(--color);
+}
 
 /* オンラインエディタの文字数カウンタ */
 .word-count {
@@ -329,12 +333,19 @@ tr[bgcolor='#dddddd'] th {
     color: #999;
 }
 
-/* バグ修正　アンケート　ダークモード限定
+/* バグ修正　アンケート　ダークモード限定 */
 /* アンケート番号 */
 /* アンケート文 */
 .dark .mod_questionnaire_completepage .qn-info .qn-number,
+.dark .mod_questionnaire_reportpage .qn-info .qn-number,
 .dark .mod_questionnaire_completepage .qn-content {
     color: var(--backgroundColor);
+}
+/* アンケート文 */
+.dark .qn-content .qn-question {
+    background-color: #13233a;
+    color: var(--color);
+    border: 2px solid #183256;
 }
 
 /* ダッシュボードのページ */
