--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -85,6 +85,11 @@ header#page-header > div.col-12.pt-3.pb-3 {
     transition: 0.5s ease;
 }
 
+/* 2024年版から.courseboxにボーダーが追加されてるから、色をマッチさせる */
+.coursebox {
+    border: 1px solid var(--borderColor) !important;
+}
+
 /* .odd はグレーに */
 section .odd {
     background-color: var(--backgroundColor);
@@ -210,10 +215,9 @@ p.is-open {
 p img {
     border-radius: var(--radius);
 }
-.dark p img,
-.dark .logo > img {
-    border-radius: var(--radius);
-    /* ダークテーマに適した色味に変更 */
+/* 画像をダークテーマに適した色味に変更 */
+.dark .logo > img,
+.dark .dash_btn img {
     filter: brightness(0.8) contrast(1.2);
 }
 
