--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -236,9 +236,14 @@ p img {
     border-radius: var(--radius);
     transition: 0.3s;
 }
-#region-main-box {
-    flex-grow: 1 !important;
+/* navRightの大学ロゴとダッシュボード
+ボタンの縦を縮小する */
+#block-region-side-post :nth-child(1) > .card-body,
+#block-region-side-post :nth-child(2) > .card-body {
+    padding-top: 0.25rem !important;
+    padding-bottom: 0.25rem !important;
 }
+
 /* コースのページ ++++++++++++++++++++++++++++++++++++++++++++++++++ */
 #page-header .card {
     background-color: var(--headerBackgroundColor);
