--- a/src/css/dark_theme.css
+++ b/src/css/dark_theme.css
@@ -92,6 +92,11 @@ header#page-header > div.col-12.pt-3.pb-3 {
 .coursebox {
     border: 1px solid var(--borderColor) !important;
 }
+/* 編集モードでドラッグで覆われた時に青色のボーダーを上だけ表示.
+reorderCourses.jsで#dragoverを付けたり消したりする */
+.coursebox#dragover {
+    border-top: 5px solid rgb(74, 74, 248) !important;
+}
 
 /* .odd はグレーに */
 section .odd {
